更新冻它官网教程按钮

--- a/i/freezeit/index.html
+++ b/i/freezeit/index.html
@@ -37,28 +37,28 @@
                         <div class="weui-flex">
                             <div class="weui-flex__item">
                                 <p class="title">冻它</p>
-
                                 <p class="sub-title">冻结后台应用的运行<br>避免浪费性能和电量
-                                <p style="font-size:16px;color: #ddd;">注：这是面具模块(Magisk Module), 非独立APP<br>你需要Root你的设备才能使用</p>
+                                <p style="font-size:16px;color: #ddd;">注：这是面具模块(Magisk Module),
+                                    非独立APP<br>你需要Root你的设备才能使用</p>
                                 </p>
-
                             </div>
                         </div>
                         <div class="download-group">
                             <div class="web-download-box"
                                 style="background-color:transparent;justify-content:space-around;height:154px;padding:0;margin-left:15px">
-                                <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip"
-                                    target="_blank" style="height:60px"><img class="web-download-" src="./download.png"
-                                        alt="立即下载" style="height:60px"></a>
+                                <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip">
+                                    <img class="web-download-" src="./download.png" style="height:60px"></a>
+                                <a href="https://jark006.github.io/FreezeitIntroduction/">
+                                    <img class="web-download-" src="./tutorials.png" style="height:60px"></a>
                             </div>
                         </div>
                         <div id="mobile-download-box" class="weui-flex">
                             <div class="weui-flex__item">
-                                <div class="mobile-download-button-box"><a
-                                        href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip"
-                                        class="download-link" data-ios=""
-                                        data-android="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip"><img
-                                            src="./download.png" alt="立即下载"> </a>
+                                <div class="mobile-download-button-box">
+                                    <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip"
+                                        class="download-link"><img src="./download.png"></a>
+                                    <a href="https://jark006.github.io/FreezeitIntroduction/"> <img
+                                            src="./tutorials.png"></a>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +97,8 @@
                 </div>
             </div>
         </div>
-        <div id="footer" styld="z-index: 10;">©2023 <a href="https://github.com/jark006" target="_blank">Github @JARK006</a>
+        <div id="footer" styld="z-index: 10;">©2023 <a href="https://github.com/jark006" target="_blank">Github
+                @JARK006</a>
         </div>
     </div>
     <style>
