--- a/i/freezeit/index.html
+++ b/i/freezeit/index.html
@@ -11,14 +11,13 @@
     <link rel="stylesheet" href="./animate.min.css">
     <link rel="stylesheet" href="./swiper-bundle.min.css">
     <link rel="stylesheet" href="./index.css">
-    <script type="text/javascript" async="" src="./js"></script>
-    <script async="" src="./js-async"></script>
-    <script>function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "G-RP7NWBCL10")</script>
-</head>
+    <script src="./js"></script>
+    <script src="./js-async"></script>
+    </head>
 
 <body data-uid="0" data-request-app="Web" data-request-hash="6cfb0f4aqxbss9" style="margin:0;background-color:#f7f7f7">
     <div id="main">
-        <div id="header" style="padding:20px 0" googl="true">
+        <div id="header" style="padding:20px 0">
             <div class="main" style="width:1000px">
                 <a href="https://github.com/jark006">
                     <span id="header-logo" style="display:flex;justify-content:left;align-items:center">
@@ -28,7 +27,7 @@
         </div>
         <div id="content">
             <div id="first_screen">
-                <div id="main-content" googl="true">
+                <div id="main-content">
                     <div class="text-group">
                         <div class="weui-flex logo-box">
                             <div class="weui-flex__item"><img class="logo" src="./logo.png" alt="Freezeit">
@@ -46,9 +45,10 @@
                         <div class="download-group">
                             <div class="web-download-box"
                                 style="background-color:transparent;justify-content:space-around;height:154px;padding:0;margin-left:15px">
-                                <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip">
+                                <a
+                                    href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip">
                                     <img class="web-download-" src="./download.png" style="height:60px"></a>
-                                <a href="https://jark006.github.io/FreezeitIntroduction/">
+                                <a href="/FreezeitIntroduction/">
                                     <img class="web-download-" src="./tutorials.png" style="height:60px"></a>
                             </div>
                         </div>
@@ -57,8 +57,7 @@
                                 <div class="mobile-download-button-box">
                                     <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip"
                                         class="download-link"><img src="./download.png"></a>
-                                    <a href="https://jark006.github.io/FreezeitIntroduction/"> <img
-                                            src="./tutorials.png"></a>
+                                    <a href="/FreezeitIntroduction/"> <img src="./tutorials.png"></a>
                                 </div>
                             </div>
                         </div>
@@ -73,16 +72,16 @@
 
                                     <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
                                         aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p1.jpg" alt="主页"> </div>
+                                            src="./p1.png" alt="主页"> </div>
                                     <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
                                         aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p2.jpg" alt="配置"> </div>
+                                            src="./p2.png" alt="配置"> </div>
                                     <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
                                         aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p3.jpg" alt="日志"> </div>
+                                            src="./p3.png" alt="日志"> </div>
                                     <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
                                         aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p4.jpg" alt="设置"> </div>
+                                            src="./p4.png" alt="设置"> </div>
 
                                 </div>
                                 <div class="swiper-pagination swiper-pagination-bullets"><span
@@ -97,49 +96,14 @@
                 </div>
             </div>
         </div>
-        <div id="footer" styld="z-index: 10;">©2023 <a href="https://github.com/jark006" target="_blank">Github
-                @JARK006</a>
+        <div id="footer"><a href="https://github.com/jark006">Github JARK006</a>
         </div>
     </div>
-    <style>
-        .github-corner:hover .octo-arm {
-            animation: octocat-wave 560ms ease-in-out
-        }
-
-        @keyframes octocat-wave {
-
-            0%,
-            100% {
-                transform: rotate(0)
-            }
-
-            20%,
-            60% {
-                transform: rotate(-25deg)
-            }
-
-            40%,
-            80% {
-                transform: rotate(10deg)
-            }
-        }
-
-        @media (max-width:500px) {
-            .github-corner:hover .octo-arm {
-                animation: none
-            }
-
-            .github-corner .octo-arm {
-                animation: octocat-wave 560ms ease-in-out
-            }
-        }
-    </style>
     <section class="wechat-tips"></section>
     <script src="./weui.min.js"></script>
     <script src="./swiper-bundle.min.js"></script>
     <script src="./clipboard.min.js"></script>
-    <script>var clipboard = new ClipboardJS(".share", { text: function () { return "冻它模块 https://jark006.github.io/i/freezeit" } }); clipboard.on("success", (function (i) { weui.toast("链接已复制，快分享给小伙伴吧！", 3e3) })); var mySwiper = new Swiper(".swiper-container", { direction: "horizontal", loop: !0, autoplay: { delay: 4e3 }, pagination: { el: ".swiper-pagination" } })</script>
-    <script>!function (e) { function r(r) { for (var n, l, f = r[0], i = r[1], a = r[2], c = 0, s = []; c < f.length; c++)l = f[c], Object.prototype.hasOwnProperty.call(o, l) && o[l] && s.push(o[l][0]), o[l] = 0; for (n in i) Object.prototype.hasOwnProperty.call(i, n) && (e[n] = i[n]); for (p && p(r); s.length;)s.shift()(); return u.push.apply(u, a || []), t() } function t() { for (var e, r = 0; r < u.length; r++) { for (var t = u[r], n = !0, f = 1; f < t.length; f++) { var i = t[f]; 0 !== o[i] && (n = !1) } n && (u.splice(r--, 1), e = l(l.s = t[0])) } return e } var n = {}, o = { 2: 0 }, u = []; function l(r) { if (n[r]) return n[r].exports; var t = n[r] = { i: r, l: !1, exports: {} }; return e[r].call(t.exports, t, t.exports, l), t.l = !0, t.exports } l.m = e, l.c = n, l.d = function (e, r, t) { l.o(e, r) || Object.defineProperty(e, r, { enumerable: !0, get: t }) }, l.r = function (e) { "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }), Object.defineProperty(e, "__esModule", { value: !0 }) }, l.t = function (e, r) { if (1 & r && (e = l(e)), 8 & r) return e; if (4 & r && "object" == typeof e && e && e.__esModule) return e; var t = Object.create(null); if (l.r(t), Object.defineProperty(t, "default", { enumerable: !0, value: e }), 2 & r && "string" != typeof e) for (var n in e) l.d(t, n, function (r) { return e[r] }.bind(null, n)); return t }, l.n = function (e) { var r = e && e.__esModule ? function () { return e.default } : function () { return e }; return l.d(r, "a", r), r }, l.o = function (e, r) { return Object.prototype.hasOwnProperty.call(e, r) }, l.p = "/"; var f = window.webpackJsonp = window.webpackJsonp || [], i = f.push.bind(f); f.push = r, f = f.slice(); for (var a = 0; a < f.length; a++)r(f[a]); var p = i; t() }([])</script>
+    <script>var mySwiper = new Swiper(".swiper-container", { direction: "horizontal", loop: !0, autoplay: { delay: 4e3 }, pagination: { el: ".swiper-pagination" } })</script>
     <script src="./chunk-vendors.e0b37b98.chunk.js"></script>
     <script src="./index.f9fb6b73.chunk.js"></script>
 </body>
