--- a/i/freezeit/index.html
+++ b/i/freezeit/index.html
@@ -21,7 +21,7 @@
             <div class="main" style="width:1000px">
                 <a href="https://github.com/jark006">
                     <span id="header-logo" style="display:flex;justify-content:left;align-items:center">
-                        <img style="height:48px;margin-right:10px" src="./logo.png">
+                        <img style="height:48px;margin-right:10px" src="/images/avatar.png">
                         <span>JARK006</span> </span></a>
             </div>
         </div>
@@ -29,13 +29,9 @@
             <div id="first_screen">
                 <div id="main-content">
                     <div class="text-group">
-                        <div class="weui-flex logo-box">
-                            <div class="weui-flex__item"><img class="logo" src="./logo.png" alt="Freezeit">
-                            </div>
-                        </div>
                         <div class="weui-flex">
                             <div class="weui-flex__item">
-                                <p class="title">冻它</p>
+                                <p class="title"><img src="/images/logo.png" style="height:80px;margin-top: 10px;"><br>冻它</p>
                                 <p class="sub-title">冻结后台应用的运行<br>避免浪费性能和电量
                                 <p style="font-size:16px;color: #ddd;">注：这是面具模块(Magisk Module),
                                     非独立APP<br>你需要Root你的设备才能使用</p>
