--- a/i/freezeit/index.html
+++ b/i/freezeit/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./animate.min.css">
     <link rel="stylesheet" href="./swiper-bundle.min.css">
     <link rel="stylesheet" href="./index.css">
-    </head>
+</head>
 
-<body data-uid="0" data-request-app="Web" data-request-hash="6cfb0f4aqxbss9" style="margin:0;background-color:#f7f7f7">
+<body style="margin:0;background-color:rgb(58, 64, 75)">
     <div id="main">
         <div id="header" style="padding:20px 0">
             <div class="main" style="width:1000px">
@@ -29,18 +29,17 @@
                     <div class="text-group">
                         <div class="weui-flex">
                             <div class="weui-flex__item">
-                                <p class="title"><img src="/images/logo.png" style="height:80px;margin-top: 10px;"><br>冻它</p>
-                                <p class="sub-title">冻结后台应用的运行<br>避免浪费性能和电量
-                                <p style="font-size:16px;color: #ddd;">注：这是面具模块(Magisk Module),
-                                    非独立APP<br>你需要Root你的设备才能使用</p>
-                                </p>
+                                <p class="title"><img src="/images/logo.png"
+                                        style="height:80px;margin-top: 10px;"><br>冻它</p>
+                                <p class="sub-title">冻结后台应用的运行<br>避免浪费性能和电量</p>
+                                <p style="font-size:16px;color: #ddd;">注：这是面具模块(Magisk Module)<br>你需要Root你的设备才能使用</p>
                             </div>
                         </div>
                         <div class="download-group">
                             <div class="web-download-box"
                                 style="background-color:transparent;justify-content:space-around;height:154px;padding:0;margin-left:15px">
                                 <a
-                                    href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip">
+                                    href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.5.0.zip">
                                     <img class="web-download-" src="./download.png" style="height:60px"></a>
                                 <a href="/FreezeitIntroduction/">
                                     <img class="web-download-" src="./tutorials.png" style="height:60px"></a>
@@ -49,7 +48,7 @@
                         <div id="mobile-download-box" class="weui-flex">
                             <div class="weui-flex__item">
                                 <div class="mobile-download-button-box">
-                                    <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.4.1.zip"
+                                    <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.5.0.zip"
                                         class="download-link"><img src="./download.png"></a>
                                     <a href="/FreezeitIntroduction/"> <img src="./tutorials.png"></a>
                                 </div>
@@ -65,17 +64,23 @@
                                     id="swiper-wrapper-28813a616f10a43ca" aria-live="off">
 
                                     <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
-                                        aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p1.png" alt="主页"> </div>
-                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
-                                        aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p2.png" alt="配置"> </div>
-                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
-                                        aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p3.png" alt="日志"> </div>
-                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="0"
-                                        aria-label="1 / 3" style="width: 400px;"><img class="large-image app-img"
-                                            src="./p4.png" alt="设置"> </div>
+                                        aria-label="1 / 6" style="width: 400px;"><img class="large-image app-img"
+                                            src="./p1.jpg" alt="主页"> </div>
+                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="1"
+                                        aria-label="2 / 6" style="width: 400px;"><img class="large-image app-img"
+                                            src="./p2.jpg" alt="配置"> </div>
+                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="2"
+                                        aria-label="3 / 6" style="width: 400px;"><img class="large-image app-img"
+                                            src="./p3.jpg" alt="日志"> </div>
+                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="3"
+                                        aria-label="4 / 6" style="width: 400px;"><img class="large-image app-img"
+                                            src="./p4.jpg" alt="设置"> </div>
+                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="4"
+                                        aria-label="5 / 6" style="width: 400px;"><img class="large-image app-img"
+                                            src="./p5.jpg" alt="时间"> </div>
+                                    <div class="swiper-slide swiper-slide-prev" role="group" data-swiper-slide-index="5"
+                                        aria-label="6 / 6" style="width: 400px;"><img class="large-image app-img"
+                                            src="./p6.jpg" alt="关于"> </div>
 
                                 </div>
                                 <div class="swiper-pagination swiper-pagination-bullets"><span
@@ -90,7 +95,7 @@
                 </div>
             </div>
         </div>
-        <div id="footer"><a href="https://github.com/jark006">Github JARK006</a>
+        <div style="text-align: center"><a href="https://github.com/jark006" style="color: #ddd;">©️2023 JARK006</a>
         </div>
     </div>
     <section class="wechat-tips"></section>
