--- a/i/freezeit/index.html
+++ b/i/freezeit/index.html
@@ -38,18 +38,16 @@
                         <div class="download-group">
                             <div class="web-download-box"
                                 style="background-color:transparent;justify-content:space-around;height:154px;padding:0;margin-left:15px">
-                                <a
-                                    href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.5.2.zip">
-                                    <img class="web-download-" src="./download.png" style="height:60px"></a>
-                                <a href="/FreezeitIntroduction/">
-                                    <img class="web-download-" src="./tutorials.png" style="height:60px"></a>
+                                <a href="/files/freezeit_v2.6.0.zip"> <img class="web-download-" src="./download.png"
+                                        style="height:60px"></a>
+                                <a href="/FreezeitIntroduction/"> <img class="web-download-" src="./tutorials.png"
+                                        style="height:60px"></a>
                             </div>
                         </div>
                         <div id="mobile-download-box" class="weui-flex">
                             <div class="weui-flex__item">
                                 <div class="mobile-download-button-box">
-                                    <a href="https://ghproxy.com/https://raw.githubusercontent.com/jark006/freezeitRelease/main/freezeit_v2.5.2.zip"
-                                        class="download-link"><img src="./download.png"></a>
+                                    <a href="/files/freezeit_v2.6.0.zip"><img src="./download.png"></a>
                                     <a href="/FreezeitIntroduction/"> <img src="./tutorials.png"></a>
                                 </div>
                             </div>
