--- a/i/freezeit/index.html
+++ b/i/freezeit/index.html
@@ -29,7 +29,7 @@
                     <div class="text-group">
                         <div class="weui-flex">
                             <div class="weui-flex__item">
-                                <p class="title"><img src="/images/logo.png"
+                                <p class="title"><img src="/images/freezeit/logo.png"
                                         style="height:80px;margin-top: 10px;"><br>冻它</p>
                                 <p class="sub-title">冻结后台应用的运行<br>避免浪费性能和电量</p>
                                 <p style="font-size:16px;color: #ddd;">注：这是面具模块(Magisk Module)<br>你需要Root你的设备才能使用</p>
